<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authentication_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.mahdi.ztd.mvvm.authentication.loginfragment.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_verifyOtpFragment"
            app:destination="@id/verifyOtpFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.mahdi.ztd.mvvm.authentication.registerfragment.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/verifyOtpFragment"
        android:name="com.mahdi.ztd.mvvm.authentication.verifiotpfragment.VerifyOtpFragment"
        android:label="@string/verify_otp"
        tools:layout="@layout/fragment_verify_otp">
        <action
            android:id="@+id/action_verifyOtpFragment_to_registerFragment"
            app:destination="@id/registerFragment" />

        <argument
            android:name="phoneNumber"
            app:argType="string" />
    </fragment>
</navigation>