<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.mahdi.ztd.mvvm.authentication.verifiotpfragment.VerifyOtpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/v_guide_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/side_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/v_guide_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/side_padding" />


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@id/verify_code_text_input_layout"
            app:layout_constraintEnd_toEndOf="@id/v_guide_end"
            app:layout_constraintStart_toStartOf="@id/v_guide_start"
            app:layout_constraintTop_toTopOf="parent"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verify_code_text_input_layout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/v_guide_end"
            app:layout_constraintStart_toStartOf="@id/v_guide_start"
            app:layout_constraintTop_toTopOf="parent"
            app:prefixTextColor="@color/default_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verify_code_text_input_edit_text"
                style="@style/TextLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verify_otp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:digits="0123456789"
                android:letterSpacing="4"
                android:lines="1"
                android:maxEms="4"
                android:gravity="center"
                android:maxLength="10"
                android:singleLine="true"
                android:text="@={vm.verifyOtp}"
                android:textColor="@color/default_text_color"
                tools:text="1234"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_count_down_timer"
            android:textSize="@dimen/text_size_huge"
            tools:text="60:00"
            android:letterSpacing="0.5"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/verify_code_text_input_layout"
            app:layout_constraintStart_toStartOf="@id/v_guide_start"
            app:layout_constraintEnd_toEndOf="@id/v_guide_end"
            android:textColor="@color/default_text_color"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_verify_otp"
            app:layout_constraintStart_toStartOf="@id/v_guide_start"
            app:layout_constraintEnd_toEndOf="@id/v_guide_end"
            app:layout_constraintTop_toBottomOf="@id/text_count_down_timer"
            android:textColor="@color/red_600"
            android:layout_marginTop="@dimen/margin_medium"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/AppTheme.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:onClick="@{() -> vm.onConfirmClicked()}"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/v_guide_end"
            app:layout_constraintStart_toStartOf="@id/v_guide_start"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>